--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,21 +5,48 @@ services:
     image: jwilder/nginx-proxy
     container_name: nginx-proxy
     ports:
-      - "80"
+      - "80:80"
+      - "443:443"
     volumes:
-      - /etc/nginx/vhost.d
-      - /usr/share/nginx/html
+      - /path/to/sample-app/certs:/etc/nginx/certs:ro           # Replace with your path
+      - /path/to/sample-app/vhost.d:/etc/nginx/vhost.d:rw       # Replace with your path
+      - /path/to/sample-app/challenge:/usr/share/nginx/html:rw  # Replace with your path
       - /var/run/docker.sock:/tmp/docker.sock:ro
-  flask-app:
-    container_name: flask-app
+    labels:
+      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy=true"
+    networks:
+      - sample-net
+  ssl-helper:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    container_name: ssl-helper
+    depends_on:
+      - "nginx-proxy"
+    volumes:
+      - /path/to/sample-app/certs:/etc/nginx/certs:rw          # Replace with your path
+      - /path/to/sample-app/vhost.d:/etc/nginx/vhost.d:rw      # Replace with your path
+      - /path/to/sample-app/challenge:/usr/share/nginx/html:rw # Replace with your path
+      - /var/run/docker.sock:/tmp/docker.sock:ro 
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    environment:
+      - NGINX_PROXY_CONTAINER=nginx-proxy
+    networks:
+      - sample-net
+  progress:
+    container_name: progress_server
     build:
       context: .
       dockerfile: Dockerfile
-    image: flask-server-image
-    ports:
-      - "80:80"
+    image: progress_server_image
     environment:
-      - VIRTUAL_HOST=flare.jacktimmins.com
+      - VIRTUAL_HOST=test.domain.com       # Replace with whatever domain you have pointing to the server
+      - LETSENCRYPT_HOST=test.domain.com   # Use the same domain as VIRTUAL_HOST
+      - LETSENCRYPT_EMAIL=test@email.com  # Use whatever email you want
     depends_on:
-      - nginx-proxy
-    command: python3 app.py
+      - ssl-helper
+    networks:
+      - sample-net
+    command: python3 progress.py
+
+networks:
+  sample-net:
+    driver: bridge
